# GMM

./: .editorconfig  .gitignore  AlgorithmArray_8hpp.html  AlgorithmArray_8hpp__incl.dot  AlgorithmArray_8hpp_source.html  CMakeLists.txt  CMakeLists_8txt.html  DataHandler_8cpp.html  DataHandler_8hpp.html  DataHandler_8hpp__incl.dot  DataHandler_8hpp_source.html  DynamicArray_8hpp.html  DynamicArray_8hpp__dep__incl.dot  DynamicArray_8hpp__incl.dot  DynamicArray_8hpp_source.html  Filter_8hpp.html  Filter_8hpp__incl.dot  Filter_8hpp_source.html  GMM_8hpp.html  GMM_8hpp__incl.dot  GMM_8hpp_source.html  HMM_8hpp.html  HMM_8hpp__incl.dot  HMM_8hpp_source.html  Kmeans_8hpp.html  Kmeans_8hpp__dep__incl.dot  Kmeans_8hpp__incl.dot  Kmeans_8hpp_source.html  LICENSE  MFCC_8hpp.html  MFCC_8hpp__incl.dot  MFCC_8hpp_source.html  Matrix_8hpp.html  Matrix_8hpp__dep__incl.dot  Matrix_8hpp__incl.dot  Matrix_8hpp_source.html  README.md  Timer_8hpp.html  Timer_8hpp__incl.dot  Timer_8hpp_source.html  (+67 more)
app/: CMakeLists.txt  main.cpp  main.txt
cmake/: Documentation.cmake
include/: AlgorithmArray.hpp  DataHandler.hpp  DynamicArray.hpp  Filter.hpp  GMM.hpp  HMM.hpp  Kmeans.hpp  MFCC.hpp  Matrix.hpp  ProjectConfig.h.in  Timer.hpp  WAV.hpp
model/: 0.hmm  0_1.gmm  0_2.gmm  0_3.gmm  1.hmm  10_1.gmm  10_2.gmm  10_3.gmm  11.hmm  11_1.gmm  11_2.gmm  12.hmm  12_1.gmm  12_2.gmm  13_1.gmm  13_2.gmm  13_3.gmm  14_1.gmm  14_2.gmm  14_3.gmm  15.hmm  15_1.gmm  15_2.gmm  16_1.gmm  16_2.gmm  16_3.gmm  1_1.gmm  1_2.gmm  1_3.gmm  2_1.gmm  2_2.gmm  2_3.gmm  3.hmm  3_1.gmm  3_2.gmm  4.hmm  4_1.gmm  4_2.gmm  (+15 more)
(+213 files in other folders)
